# nlp

./: app.py  pyproject.toml  utf8_replacements.txt
doc/: Train.text
nlp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: VD_ChromaDB_+_Langchain_QA_Multiple_documents.ipynb  Vector_Database_ChromaDB.ipynb  chroma.sqlite3  contacts.txt  cv_extraido.txt  extracted_text.txt  firstmodelnlp.h5  llm.ipynb  my_mobydick_model.h5  my_simpletokenizer  nlp.ipynb  nlp3.ipynb  nlp4.basics.ipynb  nlps.ipynb  whoops.txt
notebooks/db/: chroma.sqlite3
notebooks/db/016181b5-e0c0-454d-9738-91611117f056/: index_metadata.pickle
notebooks/db/08222a7e-a3a8-481f-bf4c-d70861ed3e5c/: index_metadata.pickle
notebooks/db/5d99a87c-7e06-430b-bd51-0686e8cde21d/: index_metadata.pickle
notebooks/db/9d081a80-400e-4160-a1ac-520e53245744/: index_metadata.pickle
notebooks/db/db0d2690-af54-430f-9972-01a5c28c9f1d/: index_metadata.pickle
notebooks/db/fb080587-fb71-44f4-a117-14f58b3efd9e/: index_metadata.pickle
notebooks/db/fd97b4b1-2182-4039-bf13-fe361c82cb6d/: index_metadata.pickle
