[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chardet>=7.2.0",
    "chromadb>=1.5.5",
    "ipykernel>=7.2.0",
    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "langchain-core==0.2.38",
    "langchain-openai==0.1.23",
    "langchain-text-splitters==0.2.4",
    "langgraph>=0.2.19",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "numpy==1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.1",
    "pypdf>=6.9.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.11",
    "tensorflow>=2.18.1",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
]
